# minihandler

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
minihandler/: Makefile  config.h  config.status  configure  configure.ac  libtool
minihandler/autom4te.cache/: output.0  output.1  requests  traces.1
minihandler/po/: Makefile  Makefile.in
minihandler/src/: Makefile  Makefile.am  Makefile.in  exithandler.c  inithandler.c  main.c  minihandler-0.1.pc  minihandler-0.1.pc.in  minihandler.h  taskhandler.c  workhandler.c
minihandler/src/.deps/: exithandler.Po  inithandler.Po  main.Po  taskhandler.Po  workhandler.Po
