##
## @info   gencpro ver.1.0
## @author Vladimir Roncevic <elektron.ronca@gmail.com>
## @brief  Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = minihandler

minihandler_SOURCES = \
	main.c	\
	minihandler.h	\
	workhandler.c	\
	inithandler.c	\
	taskhandler.c	\
	exithandler.c

minihandler_LDFLAGS = 

minihandler_LDADD = 


